--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.1",
     "joi-browser": "^13.4.0",
+    "mapbox-gl": "^2.3.0",
+    "node-dijkstra": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
+    "txml": "^4.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
