--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-dijkstra": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-mapbox-gl": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
