--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
     "joi-browser": "^13.4.0",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.3.0",
     "node-dijkstra": "^2.5.0",
     "react": "^17.0.2",
